--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,13 @@ categories = ["cryptography"]
 internal = []
 
 [dependencies]
-crunchy = "0.2.2"
+crunchy = "=0.2.2"
 
 [dev-dependencies]
-rand = "0.8.5"
-hex = "0.4.3"
-criterion = "0.5.1"
+rand = "=0.8.5"
+hex = "=0.4.3"
+criterion = "=0.5.1"
+criterion-cycles-per-byte = "=0.5.0"
 
 [lib]
 bench = false
