--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ crunchy = "=0.2.2"
 rand = "=0.8.5"
 hex = "=0.4.3"
 criterion = "=0.5.1"
+
+[target.'cfg(any(target_arch = "x86", target_arch = "x86_64", target_arch = "loongarch64"))'.dev-dependencies]
 criterion-cycles-per-byte = {git = "https://github.com/itzmeanjan/criterion-cycles-per-byte", rev = "2dc25c6"}
 
 [lib]
