--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ crunchy = "=0.2.2"
 rand = "=0.8.5"
 hex = "=0.4.3"
 criterion = "=0.5.1"
+static_assertions = "1.1.0"
 
 [target.'cfg(any(target_arch = "x86", target_arch = "x86_64", target_arch = "loongarch64"))'.dev-dependencies]
 criterion-cycles-per-byte = {git = "https://github.com/itzmeanjan/criterion-cycles-per-byte", rev = "2dc25c6"}
@@ -31,4 +32,8 @@ bench = false
 [[bench]]
 name = "multimixer_128"
 harness = false
+required-features = ["internal"]
+
+[[example]]
+name = "f_128"
 required-features = ["internal"]
